[package]
name = "dapped-out"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.anchor-lang]
version = "0.29.0"
features = ["init-if-needed"]

[dependencies.anchor-spl]
version = "0.29.0"
default-features = false
features = ["associated_token", "token", "token_2022"]
